[gd_scene load_steps=17 format=3 uid="uid://bo4r6a78x4m81"]

[ext_resource type="Script" uid="uid://b0gsok8rgxr5j" path="res://scripts/InteracoeFrame7.gd" id="1_vdvws"]
[ext_resource type="Texture2D" uid="uid://duqadxgtlq6ql" path="res://assets/images/Components_Frame 7/balaoRealxFormal.png" id="2_ew34d"]
[ext_resource type="Texture2D" uid="uid://c6q1pfwc2u7sa" path="res://assets/images/Frame 7 - O Futuro da Cidadania (2).png" id="2_y0n1r"]
[ext_resource type="Texture2D" uid="uid://cdfopk5gj6w6n" path="res://assets/button/ant_capa.png" id="4_vdvws"]
[ext_resource type="Script" uid="uid://d26rndu622wp5" path="res://scripts/buttons.gd" id="5_bc2i1"]
[ext_resource type="Texture2D" uid="uid://djuilssv0slmx" path="res://assets/images/Components_Frame 7/C_part_social.png" id="6_bc2i1"]
[ext_resource type="Texture2D" uid="uid://c44a0li12xthv" path="res://assets/button/prox.png" id="6_y2r1v"]
[ext_resource type="Texture2D" uid="uid://ck36cyhxs1cn7" path="res://assets/images/Components_Frame 7/C_part_cidadania_formal.png" id="7_y2r1v"]
[ext_resource type="Texture2D" uid="uid://b3shfjnr03ql7" path="res://assets/images/Components_Frame 7/balaoParticipSocial.png" id="8_8kdit"]
[ext_resource type="Texture2D" uid="uid://5glxfccboam8" path="res://assets/images/Components_Frame 7/C_estadania.png" id="8_y0n1r"]
[ext_resource type="Texture2D" uid="uid://7hcdbspg4h1u" path="res://assets/images/Components_Frame 7/C_direitos_humanos.png" id="9_ealhy"]
[ext_resource type="Texture2D" uid="uid://dgy5dsxuu4d8i" path="res://assets/images/Components_Frame 7/balaooquecidadania.png" id="10_ew34d"]
[ext_resource type="Texture2D" uid="uid://btgdo1mk2g7fd" path="res://assets/images/Components_Frame 7/C_o_que_e_cidadania.png" id="11_8kdit"]
[ext_resource type="Texture2D" uid="uid://bl2fpk5uttv8v" path="res://assets/images/Components_Frame 7/Botao_de_arrastar.png" id="11_y0n1r"]
[ext_resource type="Texture2D" uid="uid://pmfl7a58vpyn" path="res://assets/images/Components_Frame 7/balaoEstadania.png" id="12_ytrj8"]
[ext_resource type="Texture2D" uid="uid://drvthp208bwm3" path="res://assets/images/Components_Frame 7/balaoDireitosHumanoos.png" id="14_hfr50"]

[node name="Frame7_tscn" type="Node2D" node_paths=PackedStringArray("area_limite") groups=["page7"]]
script = ExtResource("1_vdvws")
area_limite = NodePath("Interacoes/AreaLimite")
tex_balao_cidadania = ExtResource("2_ew34d")
tex_balao_estadania = ExtResource("12_ytrj8")
tex_balao_direitos = ExtResource("14_hfr50")
tex_balao_participacao = ExtResource("8_8kdit")
tex_balao_oque_e_cid = ExtResource("10_ew34d")

[node name="ControlFundodeTela" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
metadata/_edit_use_anchors_ = true

[node name="Fundo de tela" type="TextureRect" parent="ControlFundodeTela"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 768.0
texture = ExtResource("2_y0n1r")

[node name="Interacoes" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Topics" type="Control" parent="Interacoes"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="TopicItem_ParticipacaoSocial" type="TextureRect" parent="Interacoes/Topics"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.5000002
anchor_top = 9.150001
anchor_right = 9.650001
anchor_bottom = 10.950001
offset_left = -1.5258789e-05
offset_top = -3.0517578e-05
offset_right = -3.0517578e-05
offset_bottom = -3.0517578e-05
mouse_filter = 0
texture = ExtResource("6_bc2i1")
stretch_mode = 5

[node name="TopicItem_Cidadania" type="TextureRect" parent="Interacoes/Topics"]
layout_mode = 1
anchors_preset = -1
anchor_left = 17.275002
anchor_top = 8.875
anchor_right = 23.925001
anchor_bottom = 10.700001
offset_left = -6.1035156e-05
offset_right = 2.999939
offset_bottom = -3.0517578e-05
mouse_filter = 0
texture = ExtResource("7_y2r1v")
stretch_mode = 5

[node name="TopicItem_Estadania" type="TextureRect" parent="Interacoes/Topics"]
layout_mode = 1
anchors_preset = -1
anchor_left = 18.1
anchor_top = 5.9750004
anchor_right = 23.475
anchor_bottom = 8.35
offset_top = -1.5258789e-05
offset_bottom = -9.0
mouse_filter = 0
texture = ExtResource("8_y0n1r")
stretch_mode = 5

[node name="TopicItem_DireitosHumanos" type="TextureRect" parent="Interacoes/Topics"]
layout_mode = 1
anchors_preset = -1
anchor_left = 10.625001
anchor_top = 8.8
anchor_right = 16.150002
anchor_bottom = 10.875001
offset_left = -3.0517578e-05
offset_right = -6.1035156e-05
offset_bottom = -3.0517578e-05
mouse_filter = 0
texture = ExtResource("9_ealhy")
stretch_mode = 5

[node name="TopicItem_OQueECid" type="TextureRect" parent="Interacoes/Topics"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.15
anchor_top = 6.15
anchor_right = 9.450001
anchor_bottom = 8.225
offset_right = -3.0517578e-05
mouse_filter = 0
texture = ExtResource("11_8kdit")
stretch_mode = 5

[node name="AreaLimite" type="ReferenceRect" parent="Interacoes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.0690002
anchor_top = 5.0670004
anchor_right = 24.603
anchor_bottom = 12.521001
offset_left = -11.76001
offset_top = -7.680023
offset_right = 4.880005
offset_bottom = 4.159973
border_color = Color(1, 1, 1, 1)

[node name="VBoxContainerBotao" type="VBoxContainer" parent="."]
offset_left = 328.0
offset_top = 659.0
offset_right = 694.0
offset_bottom = 713.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainerBotao"]
layout_mode = 2

[node name="anterior" type="Button" parent="VBoxContainerBotao/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_vdvws")
flat = true
script = ExtResource("5_bc2i1")

[node name="proximo" type="Button" parent="VBoxContainerBotao/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_y2r1v")
flat = true
script = ExtResource("5_bc2i1")

[node name="DragButton" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 12.725
anchor_top = 6.025
anchor_right = 14.975
anchor_bottom = 8.275001
offset_left = 466.0
offset_top = 214.0
offset_right = 556.0
offset_bottom = 304.0
texture_normal = ExtResource("11_y0n1r")

[node name="BalaoFeedback" type="TextureRect" parent="DragButton"]
layout_mode = 0
offset_top = -150.0
offset_bottom = -96.0
mouse_filter = 2

[connection signal="pressed" from="VBoxContainerBotao/HBoxContainer/anterior" to="VBoxContainerBotao/HBoxContainer/anterior" method="pagAnterior"]
[connection signal="pressed" from="VBoxContainerBotao/HBoxContainer/proximo" to="VBoxContainerBotao/HBoxContainer/proximo" method="proxPag"]
